--- a/css/style.css
+++ b/css/style.css
@@ -1,154 +1,55 @@
 @import url(variables.css);
-*{
-    padding: 0;
+ *{
     margin: 0;
-    box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-}
-body{
-    width: 100%;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr) 3fr;
-    grid-template-rows: repeat(6, 1fr);
-    grid-template-areas: 
-    ". . . logo"
-    "titulo titulo titulo logo"
-    "titulo titulo titulo logo"
-    "parrafo parrafo parrafo logo"
-    "boton . . logo"
-    "caja_1 caja_2 caja_3 ."
-    ;
-}
+ }
 .banner{
-    background: var(--color-primary);
+    display: flex;
     position: absolute;
-    width: 100%;
-    height: 85vh;
-    z-index: -5;
+    margin: 0;
+    z-index: -3;
 }
-.item_1{
-    margin-left: 30px;
-    /* background: red; */
-    grid-area: titulo;
-}
-.item_1 h1{
-    font-size: 7.5em;
-    line-height: 1;
-    font-weight: normal;
-    color: var(--color-ternary);
-}
-.item_2{
-    /* background: olivedrab; */
-    grid-area: logo;
-}
-.item_2 img{
-    width: 100%;
-    height: 110%;
-    object-fit: contain;
-}
-.item_3{
-    margin-left: 25px;
-    /* background: darkcyan; */
-    grid-area: parrafo;
-    display: flex;
-    align-items: center;
-}
-.item_3 p{
+
+.banner img{
     width: 90%;
-    height: 60px;
-    color: var(--color-ternary);
-    /* background: #e100ff; */
-}
-.item_4{
-    margin-left: 25px;
-    /* background: darkgoldenrod; */
-    grid-area: boton;
-}
-.item_4 button{
-    border: none;
-    background: var(--color-botton);
-    border-radius: 20px;
-    padding: 20px;
-    font-size: 1.1rem;
-    color: var(--color-ternary);
-}
-.item_5, .item_6, .item_7{
-    position: relative;
-    top: -45px;
-    display: flex;
-    justify-content: center;
-}
-.item_5{
-    /* background: #2d7aa0; */
-    grid-area: caja_1;
-    
-}
-.item_6{
-    /* background: #31b80b; */
-    grid-area: caja_2;
-}
-.item_7{
-    /* background: #b20bb8; */
-    grid-area: caja_3;
+    height: 100vh;
+    margin: 0 240px;
 }
 
-.card{
+.titulo{
+    width: 700px;
+    font-size: 2.8em;
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    text-align: center;
+    margin: 250px 580px;
+    position: absolute;
+    z-index: 0;
+}
+
+.texto p{
+    position: absolute;
+    /*background: red;*/
+    text-align: center;
+    width: 24%;
+    font-family: "Lato", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+    font-size: 17px;
+    margin: 460px 700px;
+}
+
+.texto button{
+    position: absolute;
+    background: black;
+    color: white;
+    border-radius: 50px;
     width: 150px;
-    height: 115px;
-    background: var(--color-card);
-    display: flex;
-    padding: 5px 16px;
-    flex-direction: column;
-    border-radius: 10px;
+    height: 50px;
+    margin-top: 550px;
+    margin-left:850px;
+    font-size: 15px;
+    font-family: "Lato", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
-.card img{
-    width: 25px;
-    height: 25px;
-    object-fit: contain;
-}
-.card h3{
-    font-size: 1.2rem;
-    margin: 5px 0;
-}
-.card p{
-    font-size: 0.5rem;
-    height: 45px;
-    /* background: red; */
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-@media (width <= 800px){
-    body{
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(9, 1fr);
-        text-align: center;
-        grid-template-areas: 
-        "titulo titulo titulo"
-        "logo logo logo"
-        "logo logo logo"
-        "logo logo logo"
-        "parrafo parrafo parrafo"
-        ". boton . "
-        "caja_1 caja_2 caja_3"
-        ;
-    }
-    .item_1 h1{
-        font-size: 4rem;
-        text-align: center;
-    }
-    .item_2 img {
-        height: 100%;
-    }
-    .item_3 p {
-        width: 100%;
-    }
-    .item_1, .item_3, .item_4{
-        margin: 0;
-        
-    }
-    .item_5, .item_6, .item_7{
-        top: -20px;
-    }
-}   
